--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "postcss": "^8.0.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "fuse.js": "^6.6.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18"
   }
 }
