--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.6.12",
+    "fuse.js": "^6.6.2",
     "postcss": "^8.0.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24",
-    "fuse.js": "^6.6.2"
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1"
   }
 }
